www/linux-c7-qtwebkit: update plist /distinfo

--- a/www/linux-c7-qtwebkit/Makefile
+++ b/www/linux-c7-qtwebkit/Makefile
@@ -1,5 +1,3 @@
-# Created by: Piotr Kubaj <pkubaj@anongoth.pl>
-
 PORTNAME=	qtwebkit
 PORTVERSION=	2.3.4
 DISTVERSIONSUFFIX=	-6.el7
@@ -9,16 +7,18 @@ MASTER_SITES=	EPEL7/q
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Qt WebKit implementation (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://qt-project.org
 
 LICENSE=	gpl3
 
-ONLY_FOR_ARCHS=	amd64
+ONLY_FOR_ARCHS=	aarch64 amd64
 
-USES=		linux:c7
+USES=		cpe linux:c7
+CPE_VENDOR=	qt
 USE_LDCONFIG=	yes
 USE_LINUX=	fontconfig png xorglibs sqlite3 qt qt-x11
-USE_LINUX_RPM=	yes
+USE_LINUX_RPM=	nolib
 
-CONFLICTS=	linux-c6-qt47-webkit-[0-9]*
+CONFLICTS=	linux-c6-qt47-webkit
 
 .include <bsd.port.mk>
