filesystems/httpdirfs: docs

--- a/filesystems/httpdirfs/Makefile
+++ b/filesystems/httpdirfs/Makefile
@@ -32,7 +32,7 @@ PORTDOCS=	README.md
 OPTIONS_DEFINE=	DOCS
 
 post-install-DOCS-on:
-	@${MKDIR} ${STAGEDIR}${DOCSDIR}
-	${INSTALL_DATA} ${WRKSRC}/README.md ${STAGEDIR}${DOCSDIR}/
+	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC}/README.md ${FAKE_DESTDIR}${DOCSDIR}/
 
 .include <bsd.port.mk>
