mail/bogofilter-bdb: force 5. its' doing this on magus

--- a/mail/bogofilter-bdb/Makefile
+++ b/mail/bogofilter-bdb/Makefile
@@ -13,7 +13,7 @@ LICENSE=	gpl2
 
 .if !defined(MASTERDIR) || ${MASTERDIR} == ${.CURDIR}
 # building master port
-USES+=		bdb:5+
+USES+=		bdb:5
 DEPRECATED=	The Berkeley DB database interface is obsolescent.
 EXPIRATION_DATE=2025-06-30
 .endif
