dns/pear-Net_DNS2: dir

--- a/dns/pear-Net_DNS2/Makefile
+++ b/dns/pear-Net_DNS2/Makefile
@@ -24,7 +24,8 @@ PLIST_FILES=	${PEARDIR}/Net/DNS2/Names.php \
 		${PEARDIR}/Net/DNS2/RR/ZONEMD.php
 
 post-install:
-	${INSTALL_DATA} ${WRKSRC}/Net/DNS2/Names.php ${STAGEDIR}${PEARDIR}/Net/DNS2/Names.php
-	${INSTALL_DATA} ${WRKSRC}/Net/DNS2/RR/ZONEMD.php ${STAGEDIR}${PEARDIR}/Net/DNS2/RR/ZONEMD.php
+	${MKDIR} ${FAKE_DESTDIR}${PEARDIR}/Net/DNS2 ${FAKE_DESTDIR}${PEARDIR}/Net/DNS2/RR
+	${INSTALL_DATA} ${WRKSRC}/Net/DNS2/Names.php ${FAKE_DESTDIR}${PEARDIR}/Net/DNS2/Names.php
+	${INSTALL_DATA} ${WRKSRC}/Net/DNS2/RR/ZONEMD.php ${FAKE_DESTDIR}${PEARDIR}/Net/DNS2/RR/ZONEMD.php
 
 .include <bsd.port.mk>
