--- a/emulators/virtualbox-ose-additions-nox11/Makefile
+++ b/emulators/virtualbox-ose-additions-nox11/Makefile
@@ -3,6 +3,8 @@ PORTREVISION=	0
 
 OPTIONS_EXCLUDE=	DBUS DEBUG OPENGL X11
 
+FAKE_OPTS=	trueprefix
+
 MASTERDIR=	${.CURDIR}/../virtualbox-ose-additions
 
 .include "${MASTERDIR}/Makefile"
