add compat12x for current and compat.el for emacs

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -5,6 +5,7 @@ SUBDIR += chef
 SUBDIR += chmlib
 SUBDIR += cinnamon-translations
 SUBDIR += cldr-emoji-annotation
+SUBDIR += compat.el
 SUBDIR += compat4x
 SUBDIR += compat5x
 SUBDIR += compat6x
@@ -13,6 +14,7 @@ SUBDIR += compat8x
 SUBDIR += compat9x
 SUBDIR += compat10x
 SUBDIR += compat11x
+SUBDIR += compat12x
 SUBDIR += cpuid
 SUBDIR += dejagnu
 SUBDIR += dict-de
