--- a/devel/cmake-gui/Makefile
+++ b/devel/cmake-gui/Makefile
@@ -1,8 +1,7 @@
 PORTNAME=	cmake
 DISTVERSION=	${_CMAKE_VERSION}
-PORTREVISION=	1
 CATEGORIES=	devel
-PKGNAMESUFFIX=	-gui-${FLAVOR}
+PKGNAMESUFFIX=	-gui
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Qt-based GUI for CMake
@@ -11,26 +10,20 @@ WWW=		https://www.cmake.org
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/Copyright.txt
 
-BUILD_DEPENDS=	sphinx-build:textproc/py-sphinx
+BUILD_DEPENDS=	sphinx-build:textproc/py-sphinx@${PY_FLAVOR}
 LIB_DEPENDS=	libcurl.so:ftp/curl \
 		libexpat.so:textproc/expat2 \
 		libjsoncpp.so:devel/jsoncpp \
 		libuv.so:devel/libuv \
 		librhash.so:security/rhash
 
-FLAVORS=		qt5 qt6
-FLAVOR?=		qt5
-qt5_CONFLICTS_INSTALL=	cmake-gui-qt6
-qt6_CONFLICTS_INSTALL=	cmake-gui-qt5
-
 USES=		cmake:run,insource compiler:c++11-lang desktop-file-utils libarchive \
-		shared-mime-info qt:${FLAVOR:S/qt//}
-_USE_QT_qt5=	core gui widgets buildtools:build qmake:build
-_USE_QT_qt6=	base
-USE_QT=		${_USE_QT_${FLAVOR}}
+		python:build shared-mime-info qt:6
+USE_QT=		base
+
 CMAKE_ARGS=	-DCMAKE_DATA_DIR:STRING="/${DATADIR_REL}" \
 		-DCMAKE_DOC_DIR:STRING="/${DOCSDIR_REL}" \
-		-DCMake_QT_MAJOR_VERSION=${FLAVOR:S/qt//}
+		-DCMake_QT_MAJOR_VERSION=6
 CMAKE_ON=	BUILD_QtDialog \
 		CMAKE_USE_SYSTEM_CURL \
 		CMAKE_USE_SYSTEM_EXPAT \
