--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -302,6 +302,7 @@ SUBDIR += wmicons
 SUBDIR += ximaging
 SUBDIR += xli
 SUBDIR += xpdf3
+SUBDIR += xpdf4
 SUBDIR += xv
 SUBDIR += xviewer
 SUBDIR += zbar
