--- a/archivers/upx/Makefile
+++ b/archivers/upx/Makefile
@@ -1,30 +1,32 @@
 PORTNAME=	upx
-PORTVERSION=	3.96
+PORTVERSION=	4.2.3
 MASTER_SITES=	https://github.com/upx/upx/releases/download/v${PORTVERSION}/
 CATEGORIES=	archivers
 DISTVERSIONSUFFIX=	-src
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Ultimate Packer for eXecutables
+WWW=		https://upx.github.io/ \
+		https://github.com/upx/upx
 
-LICENSE=	gpl2
-LICENSE_FILE=	${WRKSRC}/LICENSE
+LICENSE=	gpl2+
+LICENSE_FILE=	${WRKSRC}/COPYING
 
 LIB_DEPENDS=	libucl.so:archivers/ucl
 
-USES=		cpe gmake perl5 tar:xz
-USE_PERL5=	build
+USES=		cmake compiler:c++17-lang cpe tar:xz
 
-MAKE_ENV=	UPX_UCLDIR=${LOCALBASE} \
-		target=freebsd
-
-PLIST_FILES=	bin/upx \
-		share/man/man1/upx.1.gz
+CMAKE_ON=	UPX_CONFIG_DISABLE_BZIP2 \
+		UPX_CONFIG_DISABLE_BZIP2 \
+		UPX_CONFIG_DISABLE_GITREV \
+		UPX_CONFIG_DISABLE_SANITIZE \
+		UPX_CONFIG_DISABLE_SELF_PACK_TEST \
+		UPX_CONFIG_DISABLE_THREADS \
+		UPX_CONFIG_DISABLE_WERROR \
+		UPX_CONFIG_DISABLE_WSTRICT
 
 CPE_VENDOR=	upx_project
 
-do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/src/upx.out ${PREFIX}/bin/upx
-	${INSTALL_MAN} ${WRKSRC}/doc/upx.1 ${PREFIX}/share/man/man1
+OPTIONS_DEFINE=	DOCS
 
 .include <bsd.port.mk>
