--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1020,6 +1020,7 @@ SUBDIR += py-cycler
 SUBDIR += py-cython-test-exception-raiser
 SUBDIR += py-daemon
 SUBDIR += py-datadog
+SUBDIR += py-dateutil
 SUBDIR += py-dbus
 SUBDIR += py-ddt
 SUBDIR += py-decorator
