--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1478,6 +1478,7 @@ SUBDIR += sonarqube
 SUBDIR += sonarqube-community
 SUBDIR += sord
 SUBDIR += sparsehash
+SUBDIR += spatialindex
 SUBDIR += spdlog
 SUBDIR += spice-protocol
 SUBDIR += spirv-llvm-translator
