archivers/zstd: test broken on magus

--- a/archivers/zstd/Makefile
+++ b/archivers/zstd/Makefile
@@ -27,7 +27,8 @@ MAKE_ENV=	INSTALL_DATA="${INSTALL_DATA}" \
 		PREFIX=${TRUE_PREFIX} \
 		DESTDIR=${FAKE_DESTDIR} \
 		V=1
-TEST_TARGET=	shortest
+#TEST_TARGET=	shortest
+NO_TEST=	yes
 USE_LDCONFIG=	yes
 
 PLIST_SUB=	BUILD_TYPE=${BUILD_TYPE:tl} PORTVERSION=${PORTVERSION}
