--- a/graphics/linux-c7-sdl_image/Makefile
+++ b/graphics/linux-c7-sdl_image/Makefile
@@ -1,5 +1,3 @@
-# Created by: Piotr Kubaj <pkubaj@anongoth.pl>
-
 PORTNAME=	sdl_image
 PORTVERSION=	1.2.12
 DISTVERSIONSUFFIX=	-11.el7
@@ -10,12 +8,14 @@ DISTNAME=	SDL_image-${DISTVERSIONFULL}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Simple library to load images as SDL interfaces (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://www.libsdl.org/projects/SDL_image/
 
 LICENSE=	gpl2
 
-ONLY_FOR_ARCHS=	amd64
+ONLY_FOR_ARCHS=	aarch64 amd64
 
-USES=		linux:c7
+USES=		cpe linux:c7
+CPE_VENDOR=	libsdl
 USE_LDCONFIG=	yes
 USE_LINUX=	jpeg png sdl12 tiff
 USE_LINUX_RPM=	yes
