security/linux-rl9-libtasn1: lic

--- a/security/linux-rl9-libtasn1/Makefile
+++ b/security/linux-rl9-libtasn1/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	ASN.1 structure parser library (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://www.gnu.org/software/libtasn1/
 
-LICENSE=	LGPL21+
+LICENSE=	lgpl2.1+
 
 USES=		cpe linux:rl9
 USE_LDCONFIG=	yes
