--- a/security/linux-rl9-gnupg/Makefile
+++ b/security/linux-rl9-gnupg/Makefile
@@ -9,6 +9,8 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GNU Transport Layer Security library (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://gnutls.org/
 
+LICENSE=	gpl3
+
 USES=		cpe linux:rl9
 CPE_VENDOR=	gnu
 USE_LINUX=	gnutls libassuan libgcrypt libgpg-error libksba npth openldap sqlite3
