--- a/security/linux-rl9-gnutls/Makefile
+++ b/security/linux-rl9-gnutls/Makefile
@@ -8,6 +8,9 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GNU Transport Layer Security library (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://gnutls.org/
 
+LICENSE=        gpl3 lgpl2.1
+LICENSE_COMB=   multi
+
 USES=		cpe linux:rl9
 CPE_VENDOR=	gnu
 USE_LDCONFIG=	yes
