--- a/multimedia/linux-rl9-gstreamer1-libav/Makefile
+++ b/multimedia/linux-rl9-gstreamer1-libav/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GStreamer1 libav library (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://gstreamer.freedesktop.org/
 
-LICENSE=	LGPL20+
+LICENSE=	lgpl+
 
 USES=		linux:rl9
 USE_LDCONFIG=	yes
