--- a/multimedia/linux-rl9-libvpx/Makefile
+++ b/multimedia/linux-rl9-libvpx/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	VP8/VP9 reference encoder/decoder (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://www.webmproject.org/
 
-LICENSE=	BSD3CLAUSE
+LICENSE=	bsd3
 
 USES=		linux:rl9
 USE_LDCONFIG=	yes
