devel/git-modes: readme filename

--- a/devel/git-modes/Makefile
+++ b/devel/git-modes/Makefile
@@ -25,7 +25,7 @@ MAKE_JOBS_UNSAFE=	yes
 NO_ARCH=	yes
 
 PLIST_SUB=	ELISPDIR=${_ELISPDIR}
-PORTDOCS=	README.md
+PORTDOCS=	README.org
 
 OPTIONS_DEFINE=	DOCS
 
@@ -38,6 +38,6 @@ do-install:
 
 do-install-DOCS-on:
 	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
-	${INSTALL_DATA} ${WRKSRC}/README.md ${FAKE_DESTDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC}/README.org ${FAKE_DESTDIR}${DOCSDIR}
 
 .include <bsd.port.mk>
