devel/linux-rl9-highway: lic

--- a/devel/linux-rl9-highway/Makefile
+++ b/devel/linux-rl9-highway/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Performance-portable, length-agnostic SIMD with runtime dispatch (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://github.com/google/highway
 
-LICENSE=	APACHE20
+LICENSE=	apache2
 
 USES=		linux:rl9
 USE_LDCONFIG=	yes
