--- a/devel/linux-rl9-npth/Makefile
+++ b/devel/linux-rl9-npth/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	New GNU Portable Threads (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://www.gnupg.org/software/npth/index.html
 
-LICENSE=	LGPL21+
+LICENSE=	lgpl2.1+
 
 USES=		linux:rl9
 USE_LDCONFIG=	yes
