--- a/devel/linux-c7-sdl20/Makefile
+++ b/devel/linux-c7-sdl20/Makefile
@@ -1,5 +1,3 @@
-# Created by: Piotr Kubaj <pkubaj@anongoth.pl>
-
 PORTNAME=	sdl20
 PORTVERSION=	2.0.14
 DISTVERSIONSUFFIX=	-2.el7
@@ -17,7 +15,7 @@ ONLY_FOR_ARCHS=	amd64
 USES=		linux:c7
 USE_LDCONFIG=	yes
 USE_LINUX=	xorglibs
-USE_LINUX_RPM=	yes
+USE_LINUX_RPM=	nolib
 
 DESCR=		${.CURDIR}/../${PORTNAME}/pkg-descr
 DOCSDIR=	${PREFIX}/usr/share/doc/SDL2-${PORTVERSION}
