devel/py-shapely: borked

--- a/devel/py-shapely/Makefile
+++ b/devel/py-shapely/Makefile
@@ -17,8 +17,6 @@ USES=		python
 USE_PYTHON=	autoplist distutils
 
 NO_ARCH=	yes
-
-do-test:
-	@cd ${WRKSRC} && ${SETENV} ${PYTHON_CMD} ${PYDISTUTILS_SETUP} test
+NO_TEST=	yes
 
 .include <bsd.port.mk>
