net/openldap26-server: test off

--- a/net/openldap26-server/Makefile
+++ b/net/openldap26-server/Makefile
@@ -35,6 +35,8 @@ LICENSE_FILE=		${WRKSRC}/LICENSE
 USES=			cpe gmake libtool:keepla localbase ssl tar:tgz
 BUILD_DEPENDS+=		autoconf>0:devel/autoconf
 
+NO_TEST=	yes
+
 .if defined(CLIENT_ONLY)
 CONFLICTS_INSTALL=	${PORTNAME}2[0-57-9]-client ${PORTNAME}-client
 .else
