--- a/lang/Makefile
+++ b/lang/Makefile
@@ -30,6 +30,7 @@ SUBDIR += gcc48
 SUBDIR += gcc11
 SUBDIR += gcc12
 SUBDIR += gcc13
+SUBDIR += gcc14
 SUBDIR += gcc-ecj45
 SUBDIR += ghc
 SUBDIR += gjs
