exclude the get_cves file

--- a/Tools/magus/www/data/magus/auth/.htaccess
+++ b/Tools/magus/www/data/magus/auth/.htaccess
@@ -3,3 +3,7 @@ AuthName "Authorization Required"
 AuthBasicProvider file
 AuthUserFile /home/mbsd/magus/magus-passwd
 Require valid-user
+
+<Files "get_cves.cgi">
+    Require all granted
+</Files>
