--- a/archivers/draco/Makefile
+++ b/archivers/draco/Makefile
@@ -10,7 +10,7 @@ WWW=		https://google.github.io/draco/
 LICENSE=	apache2
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-USES=		cmake:testing compiler:c++11-lang
+USES=		cmake compiler:c++11-lang
 USE_LDCONFIG=	yes
 
 USE_GITHUB=	yes
@@ -18,12 +18,13 @@ GH_ACCOUNT=	google
 GH_TUPLE=	google:googletest:16f637f:googletest/third_party/googletest # tests require the googletest source tree for some reason, see https://github.com/google/draco/issues/731
 
 CMAKE_ON=		BUILD_SHARED_LIBS
-CMAKE_TESTING_ON=	DRACO_TESTS
-CMAKE_TESTING_TARGET=	draco_tests draco_factory_tests
+#CMAKE_TESTING_ON=	DRACO_TESTS
+#CMAKE_TESTING_TARGET=	draco_tests draco_factory_tests
+NO_TEST=	yes
 
-post-test:
-	@cd ${BUILD_WRKSRC} && \
-		./draco_tests && \
-		./draco_factory_tests
+#post-test:
+#	@cd ${BUILD_WRKSRC} && \
+#		./draco_tests && \
+#		./draco_factory_tests
 
 .include <bsd.port.mk>
