--- a/net/samba416/Makefile
+++ b/net/samba416/Makefile
@@ -294,8 +294,9 @@ TEST_ENV=			PYTHON="${PYTHON_CMD}" \
 				MD5SUM=/sbin/md5 \
 				PYTHONDONTWRITEBYTECODE=1
 
-TEST_DEPENDS=			bash:shells/bash \
-				tshark:net/wireshark@nox11
+NO_TEST=	yes
+TEST_DEPENDS=			bash:shells/bash
+#				tshark:net/wireshark@nox11
 # External Python modules
 TEST_BUILD_DEPENDS=		${PYTHON_PKGNAMEPREFIX}iso8601>=0.1.11:devel/py-iso8601@${PY_FLAVOR}
 TEST_RUN_DEPENDS=		${PYTHON_PKGNAMEPREFIX}iso8601>=0.1.11:devel/py-iso8601@${PY_FLAVOR}
