devel/py-rpds-py: noop

--- a/devel/py-rpds-py/Makefile
+++ b/devel/py-rpds-py/Makefile
@@ -27,4 +27,7 @@ NO_TEST=	yes
 post-install:
 	${FIND} ${FAKE_DESTDIR}${PYTHON_SITELIBDIR} -name '*.so' -exec ${STRIP_CMD} {} +
 
+do-test:
+	${NOOP}
+
 .include <bsd.port.mk>
