--- a/net/samba413/Makefile
+++ b/net/samba413/Makefile
@@ -326,7 +326,7 @@ AD_DC_BUILD_DEPENDS=		${SAMBA4_LMDB_DEPENDS}
 AD_DC_RUN_DEPENDS=		${SAMBA4_LMDB_DEPENDS}
 AD_DC_VARS=			PLIST+=${PKGDIR}/pkg-plist.ad_dc
 
-ADS_IMPLIES=			LDAP OPENLDAP
+ADS_IMPLIES=			LDAP
 ADS_CONFIGURE_WITH=		ads dnsupdate
 
 CLUSTER_CONFIGURE_WITH=		cluster-support
@@ -343,7 +343,6 @@ GPGME_LIB_DEPENDS=		libgpgme.so:security/gpgme
 
 LDAP_CONFIGURE_WITH=		ldap
 LDAP_CONFIGURE_ON=		--with-openldap=${LOCALBASE}
-LDAP_USE=			OPENLDAP=yes
 LDAP_USES=			ldap
 LDAP_VARS=			SAMBA4_MODULES+=idmap_ldap
 
