--- a/www/qt6-webengine/files/patch-src_3rdparty_chromium_build_config_BUILDCONFIG.gn
+++ b/www/qt6-webengine/files/patch-src_3rdparty_chromium_build_config_BUILDCONFIG.gn
@@ -6,7 +6,7 @@
    # Set to true when compiling with the Clang compiler.
 -  is_clang = current_os != "linux" ||
 +  is_clang = current_os != "linux" || current_os == "openbsd" ||
-+             current_os == "freebsd" ||
++             current_os == "freebsd" || current_os == "midnightbsd" ||
               (current_cpu != "s390x" && current_cpu != "s390" &&
                current_cpu != "ppc64" && current_cpu != "ppc" &&
                current_cpu != "mips" && current_cpu != "mips64" &&
@@ -16,7 +16,7 @@
      host_toolchain = "//build/toolchain/zos:$host_cpu"
 +  } else if (host_os == "openbsd") {
 +    host_toolchain = "//build/toolchain/openbsd:clang_$host_cpu"
-+  } else if (host_os == "freebsd") {
++  } else if (host_os == "freebsd" || host_os == "midnightbsd") {
 +    host_toolchain = "//build/toolchain/freebsd:clang_$host_cpu"
    } else {
      assert(false, "Unsupported host_os: $host_os")
@@ -25,7 +25,7 @@
    _default_toolchain = "//build/toolchain/aix:$target_cpu"
  } else if (target_os == "zos") {
    _default_toolchain = "//build/toolchain/zos:$target_cpu"
-+} else if (target_os == "openbsd" || target_os == "freebsd") {
++} else if (target_os == "openbsd" || target_os == "freebsd" || host_os == "midnightbsd") {
 +  _default_toolchain = host_toolchain
  } else {
    assert(false, "Unsupported target_os: $target_os")
@@ -36,10 +36,10 @@
  is_ios = current_os == "ios"
 -is_linux = current_os == "linux"
 +is_linux = current_os == "linux" || current_os == "openbsd" ||
-+           current_os == "freebsd"
++           current_os == "freebsd" || host_os == "midnightbsd"
 +is_openbsd = current_os == "openbsd"
-+is_freebsd = current_os == "freebsd"
-+is_bsd = current_os == "openbsd" || current_os == "freebsd"
++is_freebsd = current_os == "freebsd" || current_os == "midnightbsd"
++is_bsd = current_os == "openbsd" || current_os == "freebsd" || current_os == "midnightbsd"
  is_mac = current_os == "mac"
  is_nacl = current_os == "nacl"
  is_win = current_os == "win" || current_os == "winuwp"
