--- a/sysutils/polkit/Makefile
+++ b/sysutils/polkit/Makefile
@@ -1,10 +1,10 @@
 PORTNAME=	polkit
-DISTVERSION=	123
+DISTVERSION=	125
 CATEGORIES=	sysutils gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Framework for controlling access to system-wide components
-WWW=		https://gitlab.freedesktop.org/polkit/polkit
+WWW=		https://github.com/${GH_ACCOUNT}/${GH_PROJECT}
 
 LICENSE=	lgpl+
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -15,19 +15,18 @@ LIB_DEPENDS=	libexpat.so:textproc/expat2 \
 USERS=		polkitd
 GROUPS=		polkitd
 
-USES=		compiler:c++17-lang cpe gettext gnome libtool localbase meson \
+USES=		compiler:c++17-lang cpe gettext gnome localbase meson \
 		pathfix pkgconfig shebangfix tar:bz2
 USE_GNOME=	glib20 intltool introspection:build
 SHEBANG_FILES=	${WRKSRC}/src/polkitbackend/toarray.pl
 USE_LDCONFIG=	yes
 CPE_VENDOR=	polkit_project
 
-WRKSRC=		${WRKDIR}/${PORTNAME}-${DISTVERSION}
-
-USE_GITLAB=	yes
-GL_SITE=	https://gitlab.freedesktop.org
+USE_GITHUB=	yes
+GH_ACCOUNT=	polkit-org
 
 MESON_ARGS=	-Dpam_include=system \
+		-Dpam_prefix='etc/pam.d' \
 		-Dpolkitd_user=${USERS} \
 		-Dexamples=false \
 		-Dsession_tracking=ConsoleKit \
@@ -52,8 +51,8 @@ DUKTAPE_MESON_ON=	-Djs_engine='duktape'
 SPIDERMONKEY_LIB_DEPENDS=	libmozjs-102.so:lang/spidermonkey102
 SPIDERMONKEY_MESON_ON=		-Djs_engine='mozjs'
 
-MANPAGES_BUILD_DEPENDS=	docbook-sgml>=4.5:textproc/docbook-sgml \
-			docbook-xsl>=1.76:textproc/docbook-xsl
+MANPAGES_BUILD_DEPENDS=	docbook-sgml>0:textproc/docbook-sgml \
+			docbook-xsl>0:textproc/docbook-xsl
 MANPAGES_USE=		gnome=libxslt:build
 MANPAGES_MESON_TRUE=	man
 
