--- a/lang/Makefile
+++ b/lang/Makefile
@@ -40,6 +40,7 @@ SUBDIR += go-devel
 SUBDIR += go120
 SUBDIR += go121
 SUBDIR += go122
+SUBDIR += go123
 SUBDIR += groovy
 SUBDIR += gscheme
 SUBDIR += guile
