--- a/news/newsfetch/Makefile
+++ b/news/newsfetch/Makefile
@@ -1,13 +1,6 @@
-# New ports collection makefile for:	newsfetch
-# Date created:		12 September 1997
-# Whom:			Jun-ichiro itojun Itoh <itojun@itojun.org>
-#
-
-#
-
 PORTNAME=	newsfetch
 PORTVERSION=	1.21
-PORTREVISION=	2
+PORTREVISION=	4
 CATEGORIES=	news
 MASTER_SITES=	SUNSITE/system/news/readers
 
@@ -15,12 +8,13 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Download news articles from NNTP server
 LICENSE=	other
 
-MAKE_ENV=	BINDIR="${PREFIX}/bin" MANDIR="${PREFIX}/man/man"
+MAKE_ENV=	BINDIR="${PREFIX}/bin" MANDIR="${PREFIX}/share/man/man"
 
-USES=		uidfix
+USES=		dos2unix uidfix
+DOS2UNIX_GLOB=	*.c
 CFLAGS+=	-Wno-return-type
 PLIST_FILES=	bin/newsfetch \
-		man/man1/newsfetch.1.gz
+		share/man/man1/newsfetch.1.gz
 
 do-configure:
 	(cd ${WRKSRC} && ( \
