ad freebsd-uucp

--- a/net/Makefile
+++ b/net/Makefile
@@ -28,6 +28,7 @@ SUBDIR += dual-dhclient
 SUBDIR += empty
 SUBDIR += fping
 SUBDIR += freebsd-telnetd
+SUBDIR += freebsd-uucp
 SUBDIR += freerdp
 SUBDIR += geoclue
 SUBDIR += geocode-glib
