--- a/news/Makefile
+++ b/news/Makefile
@@ -5,6 +5,9 @@ SUBDIR += newsfetch
 SUBDIR += p5-News-Newsrc
 SUBDIR += slrn
 SUBDIR += tin
+SUBDIR += trn
+SUBDIR += trn4
+SUBDIR += ubh
 SUBDIR += yencode
 SUBDIR += yydecode
 
