--- a/news/Makefile
+++ b/news/Makefile
@@ -3,8 +3,10 @@ COMMENT = Network news
 SUBDIR += inn
 SUBDIR += lusernet
 SUBDIR += newsfetch
+SUBDIR += p5-NNTPClient
 SUBDIR += p5-News-Newsrc
 SUBDIR += slrn
+SUBDIR += suck
 SUBDIR += tin
 SUBDIR += trn
 SUBDIR += trn4
