add gopher ports

--- a/www/Makefile
+++ b/www/Makefile
@@ -24,6 +24,7 @@ SUBDIR += gnome-user-share
 SUBDIR += google-sitemapgen
 SUBDIR += googler
 SUBDIR += gophernicus
+SUBDIR += gopherus
 SUBDIR += gstreamer1-plugins-neon
 SUBDIR += gstreamer1-plugins-srt
 SUBDIR += http-parser
@@ -78,6 +79,7 @@ SUBDIR += mod_xsendfile
 SUBDIR += moinmoin
 SUBDIR += mybb
 SUBDIR += nanoblogger
+SUBDIR += ncgopher
 SUBDIR += neon
 SUBDIR += netsurf
 SUBDIR += nextcloud
