--- a/security/openssl31/Makefile
+++ b/security/openssl31/Makefile
@@ -1,8 +1,6 @@
 PORTNAME=	openssl
-DISTVERSION=	3.1.5
+PORTVERSION=	3.1.7
 CATEGORIES=	security devel
-MASTER_SITES=	https://www.openssl.org/source/ \
-		ftp://ftp.cert.dfn.de/pub/tools/net/openssl/source/
 PKGNAMESUFFIX=	31
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -22,6 +20,8 @@ CONFIGURE_ARGS=	--openssldir=${OPENSSLDIR} \
 
 USES=		cpe perl5
 USE_PERL5=	build
+USE_GITHUB=   yes
+GH_TAGNAME=   ${PORTNAME}-${PORTVERSION}
 TEST_TARGET=	test
 
 LDFLAGS_i386=	-Wl,-znotext
