--- a/security/nmap/Makefile
+++ b/security/nmap/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	nmap
-DISTVERSION=	7.91
+DISTVERSION=	7.94
 PORTREVISION=	0
 CATEGORIES=	security
 MASTER_SITES=	https://nmap.org/dist/ \
@@ -7,6 +7,7 @@ MASTER_SITES=	https://nmap.org/dist/ \
 
 MAINTAINER?=	ports@MidnightBSD.org
 COMMENT?=	Port scanning utility for large networks
+WWW=		https://nmap.org/
 
 # nmap-6.47 => svn.nmap.org/nmap-releases/nmap-6.47 (r33605)
 # https://nmap.org/book/man-legal.html
@@ -19,18 +20,23 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 
 .if !defined(MASTERDIR)
 
-LIB_DEPENDS=	libpcre.so:devel/pcre
-
 USES=		tar:bzip2 gmake cpe
+
+# XXX limit results if we do a grep in the sources!
+EXTRACT_AFTER_ARGS=	--exclude ${DISTNAME}/mswin32 \
+			--no-same-owner --no-same-permissions
+
 GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 
 OPTIONS_SUB=	yes
-OPTIONS_DEFINE=	DOCS PCAP SSH2 SSL
-OPTIONS_DEFAULT=PCAP SSH2 SSL
+OPTIONS_DEFINE=	DOCS NLS PCAP SSH2 SSL
+OPTIONS_DEFAULT=NLS SSH2 SSL
 
 PCAP_DESC=		Build with libpcap from nmap
 SSH2_DESC=		SSH2 protocol support
 
+NLS_CONFIGURE_ENABLE=	nls
 PCAP_CONFIGURE_ON=	--with-libpcap=included
 SSH2_CONFIGURE_ON=	--with-libssh2=included
 SSH2_CONFIGURE_OFF=	--without-libssh2
@@ -47,14 +53,12 @@ STRIP_FILES+=	nmap nping
 CONFIGURE_ARGS+=--without-localdirs \
 		--without-zenmap \
 		--without-ndiff \
-		--with-libpcre=${LOCALBASE} \
+		--with-libpcre=included \
 		--with-liblua=included \
 		--without-nmap-update
-CONFIGURE_TARGET=	${ARCH}-portbld-freebsd10.4
+CONFIGURE_TARGET=	${ARCH}-portbld-freebsd12.4
 
-# XXX limit results if we do a grep in the sources!
-post-extract:
-	@${RM} -r ${WRKSRC}/mswin32
+.include <bsd.mport.options.mk>
 
 .if exists(/usr/lib/libibverbs.a)
 # Link with libibverbs is needed by static libpcap
