--- a/security/libgsasl/Makefile
+++ b/security/libgsasl/Makefile
@@ -1,13 +1,13 @@
-# Created by: ijliao
-
 PORTNAME=	gsasl
-PORTVERSION=	1.8.1
+PORTVERSION=	2.2.1
+PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	GNU
 PKGNAMEPREFIX=	lib
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GNU SASL library
+WWW=		https://www.gnu.org/software/gsasl/
 
 LICENSE=	lgpl2.1
 
@@ -23,9 +23,9 @@ INSTALL_TARGET=	install-strip
 USE_LDCONFIG=	yes
 
 OPTIONS_DEFINE=	DOCS NLS
-OPTIONS_DEFAULT=GSSAPI_NONE
 OPTIONS_SINGLE=	GSSAPI
 OPTIONS_SINGLE_GSSAPI=	GSSAPI_BASE GSSAPI_HEIMDAL GSSAPI_MIT GSSAPI_NONE
+OPTIONS_DEFAULT=GSSAPI_BASE
 OPTIONS_SUB=	yes
 
 GSSAPI_BASE_CONFIGURE_ON=	--with-gssapi-impl=heimdal ${GSSAPI_CONFIGURE_ARGS}
@@ -38,8 +38,8 @@ GSSAPI_NONE_CONFIGURE_ON=	--disable-gssapi
 NLS_CONFIGURE_ENABLE=	nls
 NLS_USES=		gettext
 
-post-patch:
-	@${REINPLACE_CMD} -e '/^en@/d' ${WRKSRC}/lib/po/LINGUAS
+post-install:
+	@${INSTALL_DATA} ${WRKSRC}/lib/gl/.libs/liblgl.a ${STAGEDIR}${PREFIX}/lib
 
 post-install-DOCS-on:
 	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR} ${FAKE_DESTDIR}${DOCSDIR}/reference
