--- a/security/gsasl/files/patch-doc-Makefile.in
+++ b/security/gsasl/files/patch-doc-Makefile.in
@@ -1,29 +1,27 @@
---- doc/Makefile.in.orig	2020-01-17 06:03:59 UTC
+--- doc/Makefile.in.orig	2022-06-20 15:56:39 UTC
 +++ doc/Makefile.in
-@@ -218,7 +218,7 @@ CONFIG_CLEAN_VPATH_FILES =
+@@ -223,7 +223,7 @@ CONFIG_CLEAN_VPATH_FILES =
  PROGRAMS = $(noinst_PROGRAMS)
  print_errors_SOURCES = print-errors.c
  print_errors_OBJECTS = print-errors.$(OBJEXT)
 -print_errors_DEPENDENCIES = ../lib/src/libgsasl.la
-+print_errors_DEPENDENCIES = 
++print_errors_DEPENDENCIES =
  AM_V_lt = $(am__v_lt_@AM_V@)
  am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
  am__v_lt_0 = --silent
-@@ -1569,7 +1569,7 @@ gsasl_TEXINFOS = fdl-1.3.texi $(gdoc_TEXINFOS) \
+@@ -1941,13 +1941,13 @@ gsasl_TEXINFOS = fdl-1.3.texi $(gdoc_TEXINFOS) \
  	gsasl-api-error-labels.texi
  
- AM_CPPFLAGS = -I$(top_srcdir)/lib/src
+ AM_CPPFLAGS = -I$(top_builddir)/lib/src -I$(top_srcdir)/lib/src
 -print_errors_LDADD = ../lib/src/libgsasl.la
 +print_errors_LDADD = -lgsasl
- AM_MAKEINFOFLAGS = -I $(top_srcdir)/doc \
- 	-I $(top_builddir)/doc -I $(top_srcdir)/examples
+ AM_MAKEINFOFLAGS = -I $(top_srcdir)/examples \
+ 	-I $(top_srcdir)/doc -I $(top_builddir)/doc
  
-@@ -1577,7 +1577,7 @@ TEXI2DVI = texi2dvi $(AM_MAKEINFOFLAGS)
- AM_MAKEINFOHTMLFLAGS = $(AM_MAKEINFOFLAGS) \
- 	--no-split --number-sections --css-include=texinfo.css
- 
+ TEXI2DVI = texi2dvi $(AM_MAKEINFOFLAGS)
+ AM_MAKEINFOHTMLFLAGS = --no-split $(AM_MAKEINFOFLAGS)
 -dist_man_MANS = gsasl.1 $(gdoc_MANS)
 +dist_man_MANS = gsasl.1
  MAINTAINERCLEANFILES = $(dist_man_MANS)
  gdoc_MANS = man/gsasl_base64_to.3 man/gsasl_base64_from.3 \
- 	man/gsasl_callback_set.3 man/gsasl_callback.3 \
+ 	man/gsasl_hex_to.3 man/gsasl_hex_from.3 \
