--- a/security/libgsasl/files/patch-Makefile.in
+++ b/security/libgsasl/files/patch-Makefile.in
@@ -1,11 +1,11 @@
---- Makefile.in.orig	2019-08-02 11:28:31 UTC
+--- Makefile.in.orig	2024-01-02 17:12:11 UTC
 +++ Makefile.in
-@@ -1474,7 +1474,7 @@ target_alias = @target_alias@
- top_build_prefix = @top_build_prefix@
- top_builddir = @top_builddir@
+@@ -2116,7 +2116,7 @@ ACLOCAL_AMFLAGS = -I m4 -I lib/m4
  top_srcdir = @top_srcdir@
--SUBDIRS = lib po gl src examples tests doc gltests
-+SUBDIRS = lib gl examples tests doc gltests # po src
- EXTRA_DIST = cfg.mk maint.mk .clcopying
- ACLOCAL_AMFLAGS = -I m4
- DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-obsolete --with-gssapi-impl=no
+ AM_DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --with-gssapi-impl=no
+ ACLOCAL_AMFLAGS = -I m4 -I lib/m4
+-SUBDIRS = lib po gl src examples tests doc
++SUBDIRS = lib doc # po gl src examples tests
+ 
+ # git-version-gen
+ EXTRA_DIST = cfg.mk maint.mk CONTRIBUTING.md build-aux/git2cl \
